# old-quicrq

./: .gitignore  .gitmodules  AUTHORS.md  CMakeLists.txt  CmakeList.txt  README.md  SECURITY.md  quicrq_vs.sln  update_ptls.sh
.github/workflows/: test-clang.yml  test-macos.yml  test-suite.yml
UnitTest/: UnitTest.cpp  UnitTest.vcxproj
cmake/: AddGitSubmodule.cmake
dependencies/: CMakeLists.txt
doc/: Relay_Architecture.md  object-structure.md  protocol.md  quicrq_app.md
include/: quicrq.h  quicrq_reassembly.h  quicrq_relay.h
lib/: congestion.c  fragment.c  object_consumer.c  object_source.c  proto.c  quicrq.c  quicrq_fragment.h  quicrq_internal.h  quicrq_relay_internal.h  reassembly.c  relay.c  rt_source.c  segment.c
quicr_st/: quicr_st.vcxproj  quicr_st.vcxproj.filters
quicrq_lib/: quicrq_lib.vcxproj  quicrq_lib.vcxproj.filters
quicrq_test/: quicrq_test.vcxproj  quicrq_test.vcxproj.filters
quicrq_test_lib/: quicrq_test_lib.vcxproj  quicrq_test_lib.vcxproj.filters
quicrq_vs/: quicrq_vs.sln
quicrq_vs/UnitTest/: UnitTest.cpp  UnitTest.vcxproj
quicrq_vs/quicr_st/: quicr_st.vcxproj
quicrq_vs/quicrp_lib/: quicrp_lib.vcxproj
quicrq_vs/quicrp_test_lib/: quicrp_test_lib.vcxproj
quicrq_vs/quicrq_lib/: quicrq_lib.vcxproj  quicrq_lib.vcxproj.filters
quicrq_vs/quicrq_test/: quicrq_test.vcxproj  quicrq_test.vcxproj.filters
quicrq_vs/quicrq_test/x64/Debug/: quicrq_test.exe.recipe
quicrq_vs/quicrq_test_lib/: quicrq_test_lib.vcxproj  quicrq_test_lib.vcxproj.filters
src/: quicr_test.c  quicrq_app.c  quicrq_t.c
tests/: audio1_rt_logref.csv  basic_test.c  congestion_test.c  fourlegs_test.c  fragment_test.c  network_test.c  proto_test.c  pyramid_test.c  quicrq_test_internal.h  quicrq_tests.h  relay_test.c  subscribe_test.c  test_media.c  threelegs_test.c  triangle_test.c  twomedia_test.c  twoways_test.c  video1_logref.csv  video1_rt_logref.csv
